apps/base/tarnished/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tarnished
  labels:
    name: tarnished
