apps/base/tarnished/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tarnished
  namespace: tarnished
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tarnished.sarma.love
      secretName: sarma-wildcard-tls
  rules:
    - host: tarnished.sarma.love
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tarnished
                port:
                  number: 5577
